k8s/app-kuber/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: my-app
  namespace: default
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 8080        # порт, на который Service слушает
      targetPort: 8080  # порт внутри контейнера
